--- a/src/css/modalOverlay.css
+++ b/src/css/modalOverlay.css
@@ -1,8 +1,17 @@
 .modalOverlay {
-  background: rgba(255, 255, 255, 0.25);
+  background: hsla(0, 0%, 100%, 0.25);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.modalOverlayDrawer {
+  background: none;
+  /* box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37); */
+  backdrop-filter: blur(48px);
+  -webkit-backdrop-filter: blur(48px);
+  /* border-radius: 10px; */
+  /* border: 1px solid rgba(255, 255, 255, 0.18); */
 }
